(fix): capitalize text in alt logo

--- a/src/app/common/layout/v3-topbar/v3-topbar.component.html
+++ b/src/app/common/layout/v3-topbar/v3-topbar.component.html
@@ -31,7 +31,7 @@
             <img
               [src]="cdnAssetsUrl + 'assets/logos/bulb.svg'"
               class="m-v3Topbar__logo--bulb"
-              alt="minds"
+              alt="Minds"
             />
             <img
               *ngIf="
