--- a/src/app/common/components/rich-embed/rich-embed.ng.scss
+++ b/src/app/common/components/rich-embed/rich-embed.ng.scss
@@ -2,9 +2,9 @@
 @import '../../../modules/newsfeed/activity-v2/shared.scss';
 
 :host {
-  // ******************************************************
+  // ******************************************
   // ** MINIMAL MODE **
-  // ******************************************************
+  // ******************************************
 
   .m-activity__content--minimalMode & {
     &[class*='m-richEmbed--activityV2'] {
@@ -29,13 +29,13 @@
     }
   }
 
-  // ******************************************************
-  // ******************************************************
-  // ******************************************************
+  // ******************************************
+  // ******************************************
+  // ******************************************
   // ** DEFAULT **
-  // ******************************************************
-  // ******************************************************
-  // ******************************************************
+  // ******************************************
+  // ******************************************
+  // ******************************************
 
   &[class*='m-richEmbed--activityV2'] {
     .m-rich-embed-src {
