--- a/src/app/modules/comments/comment/comment.component.ng.scss
+++ b/src/app/modules/comments/comment/comment.component.ng.scss
@@ -1,9 +1,9 @@
 @import 'defaults.scss';
 
 :host {
-  // ******************************************************
+  // ******************************************
   // ** MODAL **
-  // ******************************************************
+  // ******************************************
 
   m-activityV2__modal & {
     .m-comment {
@@ -41,13 +41,13 @@
     }
   }
 
-  // ******************************************************
-  // ******************************************************
-  // ******************************************************
+  // ******************************************
+  // ******************************************
+  // ******************************************
   // ** DEFAULT **
-  // ******************************************************
-  // ******************************************************
-  // ******************************************************
+  // ******************************************
+  // ******************************************
+  // ******************************************
   .m-comment {
     position: relative;
   }
