--- a/src/app/modules/comments/entity-outlet-v2/entity-outlet.component.ng.scss
+++ b/src/app/modules/comments/entity-outlet-v2/entity-outlet.component.ng.scss
@@ -2,9 +2,9 @@
 @import '../../newsfeed/activity-v2/shared.scss';
 
 :host {
-  // ******************************************************
+  // ******************************************
   // ** FEED **
-  // ******************************************************
+  // ******************************************
 
   .m-activity--isFeed & {
     padding-left: $feedSpacingLeft;
@@ -20,9 +20,9 @@
     }
   }
 
-  // ******************************************************
+  // ******************************************
   // ** MODAL **
-  // ******************************************************
+  // ******************************************
 
   m-activityV2__modal & {
     padding-left: $modalScrollableContainerSpacing;
@@ -38,9 +38,9 @@
     }
   }
 
-  // ******************************************************
+  // ******************************************
   // ** SINGLE **
-  // ******************************************************
+  // ******************************************
 
   m-newsfeed--single & {
     padding-top: $spacing6;
@@ -53,13 +53,13 @@
     }
   }
 
-  // ******************************************************
-  // ******************************************************
-  // ******************************************************
+  // ******************************************
+  // ******************************************
+  // ******************************************
   // ** DEFAULT **
-  // ******************************************************
-  // ******************************************************
-  // ******************************************************
+  // ******************************************
+  // ******************************************
+  // ******************************************
   display: block;
 
   .m-commentsEntityOutlet__topBar {
