--- a/src/app/modules/comments/poster/poster.component.ng.scss
+++ b/src/app/modules/comments/poster/poster.component.ng.scss
@@ -1,22 +1,22 @@
 @import 'defaults.scss';
 
 :host {
-  // ******************************************************
+  // ******************************************
   // ** MODAL **
-  // ******************************************************
+  // ******************************************
   m-activityV2__modal & {
     .m-comments--start-conversation-label {
       display: none;
     }
   }
 
-  // ******************************************************
-  // ******************************************************
-  // ******************************************************
+  // ******************************************
+  // ******************************************
+  // ******************************************
   // ** DEFAULT **
-  // ******************************************************
-  // ******************************************************
-  // ******************************************************
+  // ******************************************
+  // ******************************************
+  // ******************************************
 
   scroll-margin: 10vh;
 }
