--- a/src/app/modules/comments/thread/thread.component.ng.scss
+++ b/src/app/modules/comments/thread/thread.component.ng.scss
@@ -1,9 +1,9 @@
 @import 'defaults.scss';
 
 :host {
-  // ******************************************************
+  // ******************************************
   // ** MODAL **
-  // ******************************************************
+  // ******************************************
 
   m-activityV2__modal & {
     .m-comments__viewMore {
@@ -11,13 +11,13 @@
     }
   }
 
-  // ******************************************************
-  // ******************************************************
-  // ******************************************************
+  // ******************************************
+  // ******************************************
+  // ******************************************
   // ** DEFAULT **
-  // ******************************************************
-  // ******************************************************
-  // ******************************************************
+  // ******************************************
+  // ******************************************
+  // ******************************************
 
   display: block;
   ::ng-deep {
