--- a/src/app/modules/newsfeed/activity-v2/modal/modal.component.ng.scss
+++ b/src/app/modules/newsfeed/activity-v2/modal/modal.component.ng.scss
@@ -89,9 +89,9 @@
     position: relative;
   }
 
-  // *********************************************
+  // *********************************
   // ** CONTENT (Right side) **
-  // *********************************************
+  // *********************************
 
   .m-activityModal__contentContainer {
     min-width: 350px;
