--- a/src/app/modules/newsfeed/activity-v2/nsfw-consent/nsfw-consent.component.ng.scss
+++ b/src/app/modules/newsfeed/activity-v2/nsfw-consent/nsfw-consent.component.ng.scss
@@ -1,9 +1,9 @@
 @import 'defaults.scss';
 
 :host {
-  // *********************************************
+  // *********************************
   // ** MINIMAL MODE **
-  // *********************************************
+  // *********************************
 
   &.m-activityNsfwConsent--minimalMode {
     ::ng-deep .m-activityNsfwConsent__button {
@@ -11,21 +11,21 @@
     }
   }
 
-  // *********************************************
+  // *********************************
   // ** MODAL **
-  // *********************************************
+  // *********************************
 
   m-activityV2__modal & {
     position: absolute;
   }
 
-  // *********************************************
-  // *********************************************
-  // *********************************************
+  // *********************************
+  // *********************************
+  // *********************************
   // ** DEFAULT **
-  // *********************************************
-  // *********************************************
-  // *********************************************
+  // *********************************
+  // *********************************
+  // *********************************
 
   display: block;
   width: 100%;
