--- a/src/app/modules/newsfeed/activity-v2/owner-block/owner-block.component.html
+++ b/src/app/modules/newsfeed/activity-v2/owner-block/owner-block.component.html
@@ -86,7 +86,7 @@
     <!-- VIEWS -->
     <!-- ---------------------------- -->
     <m-activityV2__views
-      *ngIf="!service.displayOptions.isModal"
+      *ngIf="!service.displayOptions.isModal && !wasQuoted && !wasReminded"
     ></m-activityV2__views>
     <!-- ---------------------------- -->
     <!-- MENU -->
