--- a/src/app/modules/newsfeed/activity-v2/owner-block/owner-block.component.ng.scss
+++ b/src/app/modules/newsfeed/activity-v2/owner-block/owner-block.component.ng.scss
@@ -4,18 +4,18 @@
 :host {
   display: block;
 
-  // *********************************************
+  // *********************************
   // ** FEED **
-  // *********************************************
+  // *********************************
 
   .m-activity--isFeed & {
     .m-activity__ownerBlock {
       width: 105%;
     }
   }
-  // *********************************************
+  // *********************************
   // ** MINIMAL MODE **
-  // *********************************************
+  // *********************************
 
   &.m-activity__ownerBlock--minimalMode {
     .m-activity__ownerBlock {
@@ -75,18 +75,18 @@
     }
   }
 
-  // *********************************************
+  // *********************************
   // ** MODAL **
-  // *********************************************
+  // *********************************
   m-activityV2__modal & {
     .m-activity__ownerBlock {
       padding: 20px $modalScrollableContainerSpacing 0;
     }
   }
 
-  // *********************************************
+  // *********************************
   // ** SIDEBAR BOOST **
-  // *********************************************
+  // *********************************
 
   m-ads-boost & {
     .m-activity__ownerBlock {
@@ -106,9 +106,9 @@
     }
   }
 
-  // *********************************************
+  // *********************************
   // ** SINGLE POST **
-  // *********************************************
+  // *********************************
 
   m-newsfeed--single & {
     .m-activity__ownerBlock {
@@ -116,13 +116,13 @@
     }
   }
 
-  // *********************************************
-  // *********************************************
-  // *********************************************
+  // *********************************
+  // *********************************
+  // *********************************
   // ** DEFAULT **
-  // *********************************************
-  // *********************************************
-  // *********************************************
+  // *********************************
+  // *********************************
+  // *********************************
 
   .m-activity__ownerBlock {
     display: flex;
