--- a/src/app/modules/newsfeed/activity-v2/quote/quote.component.ng.scss
+++ b/src/app/modules/newsfeed/activity-v2/quote/quote.component.ng.scss
@@ -1,9 +1,9 @@
 @import 'defaults.scss';
 
 :host {
-  // *********************************************
+  // *********************************
   // ** MINIMAL MODE **
-  // *********************************************
+  // *********************************
 
   &.m-activity__remind--minimalMode {
     padding: 0;
@@ -16,20 +16,20 @@
     }
   }
 
-  // *********************************************
+  // *********************************
   // ** MODAL **
-  // *********************************************
+  // *********************************
   // ojm remove if not used
   // m-activityV2__modal & {
   // }
 
-  // *********************************************
-  // *********************************************
-  // *********************************************
+  // *********************************
+  // *********************************
+  // *********************************
   // ** DEFAULT **
-  // *********************************************
-  // *********************************************
-  // *********************************************
+  // *********************************
+  // *********************************
+  // *********************************
 
   display: flex;
   margin: auto;
