--- a/src/app/modules/newsfeed/activity-v2/toolbar/toolbar.component.ng.scss
+++ b/src/app/modules/newsfeed/activity-v2/toolbar/toolbar.component.ng.scss
@@ -2,9 +2,9 @@
 @import '../shared.scss';
 
 :host {
-  // *********************************************
+  // *********************************
   // ** FEED **
-  // *********************************************
+  // *********************************
 
   .m-activityToolbar__actions {
     padding-left: $feedSpacingLeft;
@@ -18,17 +18,17 @@
     }
   }
 
-  // *********************************************
+  // *********************************
   // ** FIXED HEIGHT **
-  // *********************************************
+  // *********************************
 
   .m-activity--fixedHeight & {
     z-index: 1;
   }
 
-  // *********************************************
+  // *********************************
   // ** MODAL **
-  // *********************************************
+  // *********************************
 
   m-activityV2__modal & {
     .m-activityToolbar__actions,
@@ -71,9 +71,9 @@
     }
   }
 
-  // *********************************************
+  // *********************************
   // ** SINGLE **
-  // *********************************************
+  // *********************************
 
   m-newsfeed--single & {
     .m-activityToolbar__actions,
@@ -101,13 +101,13 @@
     }
   }
 
-  // *********************************************
-  // *********************************************
-  // *********************************************
+  // *********************************
+  // *********************************
+  // *********************************
   // ** DEFAULT **
-  // *********************************************
-  // *********************************************
-  // *********************************************
+  // *********************************
+  // *********************************
+  // *********************************
 
   @include m-theme() {
     background-color: themed($m-bgColor--primary);
