--- a/src/app/modules/newsfeed/activity/modal/modal.component.ng.scss
+++ b/src/app/modules/newsfeed/activity/modal/modal.component.ng.scss
@@ -332,9 +332,9 @@ $modal-padding: 20px;
     }
   }
 
-  // ******************************************************
+  // ******************************************
   // ** CONTENT (Right side) **
-  // ******************************************************
+  // ******************************************
 
   .m-activityModal__contentContainer {
     min-width: 350px;
@@ -599,7 +599,7 @@ $modal-padding: 20px;
     visibility: hidden;
   }
 
-  // ******************************************************
+  // ******************************************
 
   ::ng-deep {
     m-activity__content {
