--- a/src/app/modules/newsfeed/boost-rotator/boost-rotator.component.html
+++ b/src/app/modules/newsfeed/boost-rotator/boost-rotator.component.html
@@ -22,7 +22,8 @@
           showOnlyCommentsInput: false,
           showComments: false,
           fixedHeight: true,
-          fixedHeightContainer: true
+          fixedHeightContainer: true,
+          isFeed: true
         }"
         [attr.data-minds-activity-guid]="entity.guid"
         [slot]="i + 1"
