--- a/src/app/modules/comments/list/list.component.ng.scss
+++ b/src/app/modules/comments/list/list.component.ng.scss
@@ -1,9 +1,9 @@
 @import 'defaults.scss';
 
 :host {
-  // ******************************************************
+  // ******************************************
   // ** MODAL **
-  // ******************************************************
+  // ******************************************
 
   m-activityV2__modal & {
     .m-comments__startConversation {
