--- a/src/app/modules/newsfeed/activity-v2/activity.component.ng.scss
+++ b/src/app/modules/newsfeed/activity-v2/activity.component.ng.scss
@@ -11,9 +11,9 @@
     background: themed($m-bgColor--primary);
   }
 
-  // *********************************************
+  // *********************************
   // ** FEED **
-  // *********************************************
+  // *********************************
 
   &.m-activity--isFeed {
     padding-bottom: $spacing4;
@@ -32,14 +32,14 @@
     }
   }
 
-  // *********************************************
+  // *********************************
   // ** FIXED HEIGHT **
-  // *********************************************
+  // *********************************
 
   &.m-activity--fixedHeight {
     height: 650px; // ojm fixedHeight change?
     display: flex;
-    flex-direction: row;
+    // flex-direction: row; // ojm why did i
 
     ::ng-deep {
       m-activityV2__nsfwConsent {
@@ -60,15 +60,24 @@
     width: 100%;
   }
 
-  // *********************************************
+  // *********************************
   // ** MINIMAL MODE **
-  // *********************************************
+  // *********************************
 
   &.m-activity--minimalMode {
     padding: 0;
+    border-radius: $borderRadius--activity !important;
 
     @include m-theme() {
       border: 1px solid themed($m-borderColor--primary) !important;
+    }
+
+    @media screen and (max-width: $max-mobile) {
+      border-radius: 0 !important;
+      @include m-theme() {
+        border: none !important;
+        border-top: 1px solid themed($m-borderColor--primary) !important;
+      }
     }
     .m-activity__top {
       padding-top: 0;
@@ -82,9 +91,9 @@
     }
   }
 
-  // *********************************************
+  // *********************************
   // ** MODAL **
-  // *********************************************
+  // *********************************
 
   m-activityV2__modal & {
     padding: 0;
@@ -93,9 +102,9 @@
     }
   }
 
-  // *********************************************
+  // *********************************
   // ** SIDEBAR BOOST **
-  // *********************************************
+  // *********************************
 
   m-ads-boost & {
     padding: 0;
@@ -107,9 +116,9 @@
     }
   }
 
-  // *********************************************
+  // *********************************
   // ** SINGLE **
-  // *********************************************
+  // *********************************
 
   m-newsfeed--single & {
     padding: 0;
@@ -132,13 +141,13 @@
     }
   }
 
-  // *********************************************
-  // *********************************************
-  // *********************************************
+  // *********************************
+  // *********************************
+  // *********************************
   // ** DEFAULT **
-  // *********************************************
-  // *********************************************
-  // *********************************************
+  // *********************************
+  // *********************************
+  // *********************************
 
   .m-activity__top {
     display: flex;
@@ -175,9 +184,9 @@
     }
   }
 
-  // *********************************************
+  // *********************************
   // ** AVATAR **
-  // *********************************************
+  // *********************************
 
   .m-activity__avatar,
   ::ng-deep m-activityV2__quote .m-activity__avatar {
