--- a/src/app/modules/newsfeed/activity-v2/badges/badges.component.html
+++ b/src/app/modules/newsfeed/activity-v2/badges/badges.component.html
@@ -21,6 +21,21 @@
     <m-icon iconId="push_pin" [sizeFactor]="23"></m-icon>
   </span>
   <!------------------------->
+  <!-- UNLISTED  ------------>
+  <!------------------------->
+  <span
+    *ngIf="
+      service.displayOptions.showVisibilityState &&
+      (service.isUnlisted$ | async)
+    "
+    class="m-activityV2__badge m-activityV2__badge--unlisted"
+    data-cy="m-activity__unlistedFlag"
+    title="Unlisted"
+    i18n-title="@@OWNER_BLOCK__UNLISTED"
+  >
+    <m-icon iconId="visibility_off" [sizeFactor]="23"></m-icon>
+  </span>
+  <!------------------------->
   <!-- PERMAWEB  ------------>
   <!------------------------->
   <span
