--- a/src/app/modules/newsfeed/activity-v2/menu/menu.component.ng.scss
+++ b/src/app/modules/newsfeed/activity-v2/menu/menu.component.ng.scss
@@ -1,9 +1,9 @@
 @import 'defaults.scss';
 
 :host {
-  // *********************************************
+  // *********************************
   // ** MODAL **
-  // *********************************************
+  // *********************************
   m-activityV2__modal & {
     .m-dropdown--v2 {
       z-index: 5;
@@ -14,13 +14,13 @@
     }
   }
 
-  // *********************************************
-  // *********************************************
-  // *********************************************
+  // *********************************
+  // *********************************
+  // *********************************
   // ** DEFAULT **
-  // *********************************************
-  // *********************************************
-  // *********************************************
+  // *********************************
+  // *********************************
+  // *********************************
 
   position: relative;
 
