--- a/src/app/common/components/button/button.component.ng.scss
+++ b/src/app/common/components/button/button.component.ng.scss
@@ -85,7 +85,7 @@
       &.m-button--solid {
         @include m-theme() {
           background-color: themed($m-link);
-          color: themed($m-textColor--primaryInverted);
+          color: themed($m-white-always);
         }
 
         &:not(:disabled) {
