--- a/src/app/modules/newsfeed/feeds/subscribed.component.html
+++ b/src/app/modules/newsfeed/feeds/subscribed.component.html
@@ -1,5 +1,4 @@
 <div class="m-newsfeed__inner">
-  <m-emailConfirmation></m-emailConfirmation>
   <ng-container [m-clientMeta]="{ source: 'feed/subscribed', medium: 'feed' }">
     <div
       class="m-border mdl-color--green mdl-color-text--white m-newsfeed-boost-promo"
@@ -18,6 +17,8 @@
         #composer
       ></m-composer>
     </ng-container>
+
+    <m-feedNotice__outlet position="top"></m-feedNotice__outlet>
 
     <m-feedHeader
       *ngIf="topFeedExperimentActive"
@@ -57,6 +58,10 @@
       <ng-container
         *ngFor="let activity$ of feedService.feed | async; let i = index"
       >
+        <m-feedNotice__outlet
+          *ngIf="(i > 0 && i % 5 === 0) || i === 3"
+          position="inline"
+        ></m-feedNotice__outlet>
         <m-featured-content
           *ngIf="(i > 0 && i % 5 === 0) || i === 3"
           [slot]="i + 1"
