Update placeholder text

--- a/src/app/modules/notices/build-your-algorithm/build-your-algorithm-notice.component.html
+++ b/src/app/modules/notices/build-your-algorithm/build-your-algorithm-notice.component.html
@@ -5,9 +5,9 @@
     >Build your algorithm</span
   >
   <p class="m-feedNotice__body" i18n="@@FEED_NOTICE__BUILD_YOUR_ALGORITHM_BODY">
-    <!-- TODO: Add text -->
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Turpis integer.
-    Consectetur adipiscing elit. Turpis integer.
+    Take control of your social media. Your preferences will improve your
+    Discovery and similar feeds. But don't worry, it won't impact your default
+    newsfeed.
   </p>
   <m-button
     class="m-feedNotice__buttonPrimary"
