--- a/src/app/modules/notices/enable-push-notifications/enable-push-notifications-notice.component.html
+++ b/src/app/modules/notices/enable-push-notifications/enable-push-notifications-notice.component.html
@@ -8,9 +8,9 @@
     class="m-feedNotice__body"
     i18n="@@FEED_NOTICE__ENABLE_PUSH_NOTIFICATIONS__BODY"
   >
-    <!--TODO: Add actual text -->
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Turpis integer.
-    Consectetur adipiscing elit. Turpis integer.
+    Get alerted when someone replies to you, or likes, reminds, or subscribes to
+    your content. Customize your settings to decide which notifications you
+    want.
   </p>
   <m-button
     class="m-feedNotice__buttonPrimary"
