Account quality score for admins

--- a/src/app/common/components/badges/badges.component.html
+++ b/src/app/common/components/badges/badges.component.html
@@ -1,4 +1,7 @@
 <ul class="m-channel--badges">
+  <li *ngIf="showMidDot">
+    &middot;
+  </li>
   <li *ngIf="shouldShowVerifiedBadge()" (click)="verify($event)">
     <m-tooltip
       icon="verified_user"
