Refactored module scaffolding and added many specs

--- a/src/app/modules/notices/template/feed-notice.component.ng.scss
+++ b/src/app/modules/notices/template/feed-notice.component.ng.scss
@@ -1,7 +1,7 @@
 @import 'defaults.scss';
 @import 'typography';
 @import 'spacing';
-@import '../../common/layout/layout.scss';
+@import '../../../common/layout/layout.scss';
 
 $topbarHeight: 75px;
 
